--- a/app/src/main/res/layout/fragment_boggle_board.xml
+++ b/app/src/main/res/layout/fragment_boggle_board.xml
@@ -9,6 +9,7 @@
         android:id="@+id/button1"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:textSize="50sp"
         android:text="1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/button2"
@@ -19,6 +20,7 @@
         android:id="@+id/button2"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:textSize="50sp"
         android:text="2"
         app:layout_constraintStart_toEndOf="@id/button1"
         app:layout_constraintEnd_toStartOf="@id/button3"
@@ -29,6 +31,7 @@
         android:id="@+id/button3"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:textSize="50sp"
         android:text="3"
         app:layout_constraintStart_toEndOf="@id/button2"
         app:layout_constraintEnd_toStartOf="@id/button4"
@@ -39,6 +42,7 @@
         android:id="@+id/button4"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:textSize="50sp"
         android:text="4"
         app:layout_constraintStart_toEndOf="@id/button3"
         app:layout_constraintEnd_toEndOf="parent"
@@ -49,6 +53,7 @@
         android:id="@+id/button5"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:textSize="50sp"
         android:text="5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/button6"
@@ -59,6 +64,7 @@
         android:id="@+id/button6"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:textSize="50sp"
         android:text="6"
         app:layout_constraintStart_toEndOf="@id/button5"
         app:layout_constraintEnd_toStartOf="@id/button7"
@@ -69,6 +75,7 @@
         android:id="@+id/button7"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:textSize="50sp"
         android:text="7"
         app:layout_constraintStart_toEndOf="@id/button6"
         app:layout_constraintEnd_toStartOf="@id/button8"
@@ -79,6 +86,7 @@
         android:id="@+id/button8"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:textSize="50sp"
         android:text="8"
         app:layout_constraintStart_toEndOf="@id/button7"
         app:layout_constraintEnd_toEndOf="parent"
@@ -89,6 +97,7 @@
         android:id="@+id/button9"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:textSize="50sp"
         android:text="9"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/button10"
@@ -99,6 +108,7 @@
         android:id="@+id/button10"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:textSize="50sp"
         android:text="10"
         app:layout_constraintStart_toEndOf="@id/button9"
         app:layout_constraintEnd_toStartOf="@id/button11"
@@ -109,6 +119,7 @@
         android:id="@+id/button11"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:textSize="50sp"
         android:text="11"
         app:layout_constraintStart_toEndOf="@id/button10"
         app:layout_constraintEnd_toStartOf="@id/button12"
@@ -119,6 +130,7 @@
         android:id="@+id/button12"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:textSize="50sp"
         android:text="12"
         app:layout_constraintStart_toEndOf="@id/button11"
         app:layout_constraintEnd_toEndOf="parent"
@@ -129,40 +141,77 @@
         android:id="@+id/button13"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:textSize="50sp"
         android:text="13"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/button14"
         app:layout_constraintTop_toBottomOf="@id/button9"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintBottom_toTopOf="@id/currentText" />
 
     <Button
         android:id="@+id/button14"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:textSize="50sp"
         android:text="14"
         app:layout_constraintStart_toEndOf="@id/button13"
         app:layout_constraintEnd_toStartOf="@id/button15"
         app:layout_constraintTop_toBottomOf="@id/button10"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintBottom_toTopOf="@id/currentText" />
 
     <Button
         android:id="@+id/button15"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:textSize="50sp"
         android:text="15"
         app:layout_constraintStart_toEndOf="@id/button14"
         app:layout_constraintEnd_toStartOf="@id/button16"
         app:layout_constraintTop_toBottomOf="@id/button11"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintBottom_toTopOf="@id/currentText" />
 
     <Button
         android:id="@+id/button16"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:textSize="50sp"
         android:text="16"
         app:layout_constraintStart_toEndOf="@id/button15"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/button12"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintBottom_toTopOf="@id/currentText" />
+    <TextView
+        android:id="@+id/currentText"
+        android:gravity="center"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:textSize="50sp"
+        android:hint="Word Appears Here"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/button16"
+        app:layout_constraintBottom_toTopOf="@id/clearButton"
+        />
+    <Button
+        android:id="@+id/clearButton"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:text="Clear"
+        android:textSize="30sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/currentText"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/submitButton"
+        />
+    <Button
+        android:id="@+id/submitButton"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:text="Submit"
+        android:textSize="30sp"
+        app:layout_constraintStart_toEndOf="@id/clearButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/currentText"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
