all gameplay features work

--- a/app/src/main/res/layout/fragment_boggle_menu.xml
+++ b/app/src/main/res/layout/fragment_boggle_menu.xml
@@ -8,8 +8,9 @@
         android:id="@+id/scoreText"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:text="Score: _"
-        android:textSize="50sp"
+        android:text="Score: 0"
+        android:gravity="center"
+        android:textSize="30sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/newGameButton"
         app:layout_constraintTop_toTopOf="parent"
