correct toasts made

--- a/app/src/main/res/layout/fragment_boggle_board.xml
+++ b/app/src/main/res/layout/fragment_boggle_board.xml
@@ -10,7 +10,6 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:textSize="50sp"
-        android:text="1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/button2"
         app:layout_constraintTop_toTopOf="parent"
@@ -21,7 +20,6 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:textSize="50sp"
-        android:text="2"
         app:layout_constraintStart_toEndOf="@id/button1"
         app:layout_constraintEnd_toStartOf="@id/button3"
         app:layout_constraintTop_toTopOf="parent"
@@ -32,7 +30,6 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:textSize="50sp"
-        android:text="3"
         app:layout_constraintStart_toEndOf="@id/button2"
         app:layout_constraintEnd_toStartOf="@id/button4"
         app:layout_constraintTop_toTopOf="parent"
@@ -43,7 +40,6 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:textSize="50sp"
-        android:text="4"
         app:layout_constraintStart_toEndOf="@id/button3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -54,7 +50,6 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:textSize="50sp"
-        android:text="5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/button6"
         app:layout_constraintTop_toBottomOf="@id/button1"
@@ -65,7 +60,6 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:textSize="50sp"
-        android:text="6"
         app:layout_constraintStart_toEndOf="@id/button5"
         app:layout_constraintEnd_toStartOf="@id/button7"
         app:layout_constraintTop_toBottomOf="@id/button2"
@@ -76,7 +70,6 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:textSize="50sp"
-        android:text="7"
         app:layout_constraintStart_toEndOf="@id/button6"
         app:layout_constraintEnd_toStartOf="@id/button8"
         app:layout_constraintTop_toBottomOf="@id/button3"
@@ -87,7 +80,6 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:textSize="50sp"
-        android:text="8"
         app:layout_constraintStart_toEndOf="@id/button7"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/button4"
@@ -98,7 +90,6 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:textSize="50sp"
-        android:text="9"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/button10"
         app:layout_constraintTop_toBottomOf="@id/button5"
@@ -109,7 +100,6 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:textSize="50sp"
-        android:text="10"
         app:layout_constraintStart_toEndOf="@id/button9"
         app:layout_constraintEnd_toStartOf="@id/button11"
         app:layout_constraintTop_toBottomOf="@id/button6"
@@ -120,7 +110,6 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:textSize="50sp"
-        android:text="11"
         app:layout_constraintStart_toEndOf="@id/button10"
         app:layout_constraintEnd_toStartOf="@id/button12"
         app:layout_constraintTop_toBottomOf="@id/button7"
@@ -131,7 +120,6 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:textSize="50sp"
-        android:text="12"
         app:layout_constraintStart_toEndOf="@id/button11"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/button8"
@@ -142,7 +130,6 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:textSize="50sp"
-        android:text="13"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/button14"
         app:layout_constraintTop_toBottomOf="@id/button9"
@@ -153,7 +140,6 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:textSize="50sp"
-        android:text="14"
         app:layout_constraintStart_toEndOf="@id/button13"
         app:layout_constraintEnd_toStartOf="@id/button15"
         app:layout_constraintTop_toBottomOf="@id/button10"
@@ -164,7 +150,6 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:textSize="50sp"
-        android:text="15"
         app:layout_constraintStart_toEndOf="@id/button14"
         app:layout_constraintEnd_toStartOf="@id/button16"
         app:layout_constraintTop_toBottomOf="@id/button11"
@@ -175,7 +160,6 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:textSize="50sp"
-        android:text="16"
         app:layout_constraintStart_toEndOf="@id/button15"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/button12"
@@ -186,7 +170,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:textSize="50sp"
-        android:hint="Word Appears Here"
+        android:hint="@string/hint"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/button16"
@@ -196,7 +180,7 @@
         android:id="@+id/clearButton"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:text="Clear"
+        android:text="@string/clear"
         android:textSize="30sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/currentText"
@@ -207,7 +191,7 @@
         android:id="@+id/submitButton"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:text="Submit"
+        android:text="@string/submit"
         android:textSize="30sp"
         app:layout_constraintStart_toEndOf="@id/clearButton"
         app:layout_constraintEnd_toEndOf="parent"
