--- a/app/src/main/res/layout/fragment_boggle_menu.xml
+++ b/app/src/main/res/layout/fragment_boggle_menu.xml
@@ -8,9 +8,8 @@
         android:id="@+id/scoreText"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:text="Score: 0"
         android:gravity="center"
-        android:textSize="30sp"
+        android:textSize="40sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/newGameButton"
         app:layout_constraintTop_toTopOf="parent"
@@ -20,7 +19,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:textSize="30sp"
-        android:text="New Game"
+        android:text="@string/new_game"
         app:layout_constraintStart_toEndOf="@id/scoreText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
